[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>", "Patrick Neilson <patrick.neilson.tech@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.59"                                # error handling
bytes = "0.5"                                    # helps manage buffers
thiserror = "1.0.32"                             # error handling
tokio = { version = "0.2", features = ["full"] } # async networking

[dev-dependencies]
rstest = "0.15.0"                                # Testing
